# RutasColombiaBack/api/swagger/swagger.yaml
@@ -239,7 +239,73 @@ paths:
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ErrorResponse"              
+            $ref: "#/definitions/ErrorResponse"       
+  /listarSitiosEmpresas:
+    x-swagger-router-controller: sitiosEmpresas.controlador
+    post:
+      description: Devuelve todas las categorías de los sitios
+      operationId: listarSitiosEmpresas
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/Object"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Object"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"     
+  /crearSitioEmpresa:
+    x-swagger-router-controller: sitiosEmpresas.controlador
+    post:
+      description: Creación de una categoría de un sitio
+      operationId: crearSitioEmpresa
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/Object"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Object"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"                 
+  /editarSitioEmpresa:
+    x-swagger-router-controller: sitiosEmpresas.controlador
+    post:
+      description: Edición de una categoría de un sitio
+      operationId: editarSitioEmpresa
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/Object"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Object"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"                        
   /listarPersonas:
     x-swagger-router-controller: personas.controlador
     post:
